# VulkanHPP

./: .gitignore  CMakeLists.txt  README.md  clean.bat  dbuild.bat  dmb.bat  rbuild.bat  rmb.bat  runb.bat  runr.bat  vcpkg.json
assets/models/chest/source/: MESH_Chest.fbx
assets/shaders/: shader.spv
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  app.cpp  app.hpp  window.cpp  window.hpp
src/core/ui/: ui_layer.cpp  ui_layer.hpp
src/renderer/: CMakeLists.txt
src/renderer/vulkan/: CMakeLists.txt  vk_buffer.cpp  vk_buffer.hpp  vk_image.hpp  vk_material.cpp  vk_material.hpp  vk_mesh.hpp  vk_model.cpp  vk_model.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_texture.cpp  vk_texture.hpp  vk_types.hpp  vk_ubo.hpp  vk_vertex.hpp
src/shaders/: shader.slang
src/tools/: assimp_glm_helpers.hpp
src/tools/logger/: logger.hpp
src/tools/threadPool/: threadpool.hpp
